<resources>
    <string name="app_name">GymFit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_firstpage_title">BUILD YOUR BODY</string>
    <string name="home_firstpage_para">Stay Connected With Your Customers. Life Begins At The End Of Your Comfort Zone</string>
    <string name="home_secondpage_para">LOOK in the MIRROR --- Thats your competition </string>
    <string name="home_thirdpage_para">The last three or four reps is what makes the muscle grow. This area of pain divides a champion from someone who is not a champion</string>
    <string name="home_about_title">ABOUT GYMFIT</string>
    <string name="home_about_content">Lacking motivation to get back into the gym? Back in the gym already but feel stagnated? Or maybe you’re just looking for new inspiration for a new year. \n Gymfit provides powerful software solution for clubs to enabling integrated management of all the gym areas.</string>
    <string name="home_course_title">OUR COURSES</string>
    <string name="squat">Squat</string>
    <string name="squatPara">The most obvious benefit of squats is building your leg muscles – calves. These drills also create an anabolic environment, which promotes body-wide muscle building, improving muscle mass.</string>
    <string name="deadlift">Deadlift</string>
    <string name="deadliftPara">A deadlift is a strength-training exercise that primarily targets your hamstrings, lower back, quadriceps and glutes.You are picking up "dead weight" from the ground</string>
    <string name="legPress">Leg press</string>
    <string name="legPressPara">As you exercise with a leg press, the muscles worked primarily include the quadriceps and hamstrings.They\'re a Killer Warm-Up on Leg Days.They Build Awesome Quad Strength.They Can Help You Break Through Plateaus.</string>
    <string name="chestFly">Chest Fly</string>
    <string name="chestFlyPara">A fly or flye is a strength training exercise in which the hand and arm move through an arc while the elbow is kept at a constant angle.</string>
    <string name="lunge">Lunge</string>
    <string name="lungePara">A lunge can refer to any position of the human body where one leg is positioned forward with knee bent and foot flat on the ground while the other leg is positioned behin.</string>
    <string name="benchPress">Bench Press</string>
    <string name="benchPressPara">The bench press is a core fundamental exercise for developing upper body strength.By touching the bar to your chest, you ensure a full range of motion.</string>
    <string name="home_trainer_title">OUR TRAINERS</string>
    <string name="trainer_name_1">JOHN SMITH1</string>
    <string name="trainer_prof_1">GYM TRAINER1</string>
    <string name="trainer_name_2">JOHN SMITH2</string>
    <string name="trainer_prof_2">GYM TRAINER2</string>
    <string name="trainer_name_3">JOHN SMITH3</string>
    <string name="trainer_prof_3">GYM TRAINER3</string>
    <string name="trainer_name_4">JOHN SMITH4</string>
    <string name="trainer_prof_4">GYM TRAINER4</string>
    <string name="trainer_name_5">JOHN SMITH5</string>
    <string name="trainer_prof_5">GYM TRAINER5</string>
    <string name="trainer_name_6">JOHN SMITH6</string>
    <string name="trainer_prof_6">GYM TRAINER6</string>
    <string name="about_fragment">A gym is a club, building, or large room, usually containing special equipment, where people go to do physical exercise and get fit....Gym is the activity of doing physical exercises in a gym, especially at school. \n Gymfit | Cloud Gym Software is designed after consulting with fitness industry experts and in depth research on day to day operational management requirements of gyms. Gymate provides powerful software solution for clubs to enabling integrated management of all the gym areas. With Gymate, you can manage Inquiry &amp; Membership Management, Payroll, Employee Management &amp; HR, Schedule Management &amp; Tracking, Sales &amp; Marketing Management, Income Expense Management, Accounting &amp; Taxation, Access Control Integration, Asset Management, Retail Point of Sale
</string>
    <string name="about_fragment_title">Building A Community of Fitness Athletic</string>
    <string name="course_title1">KETTLEBELL</string>
    <string name="course_title2">CONJUGATE METHODS</string>
    <string name="course_title3">ADVANCED GYMNASTIC</string>
    <string name="course_title4">BODY PUMP</string>
    <string name="course_title5">STRIKING</string>
    <string name="course_title6">CARDIO</string>
    <string name="click_for_more_information">CLICK FOR MORE INFORMATION</string>
    <string name="course_time1">09:00 – 10:00AM</string>
    <string name="course_time2">10:00 – 11:00AM</string>
    <string name="course_time3">11:00 – 12:00AM</string>
    <string name="course_time4">05:00 – 07:00AM</string>
    <string name="course_time5">04:00 – 05:00AM</string>
    <string name="course_time6">07:00 – 09:00AM</string>
    <string name="course_para1">You\'re building muscle, increasing power endurance, and getting lean all at once. By bridging the gap between cardio and strength training, your overall physical fitness levels will skyrocket, getting you to the best shape of your life </string>
    <string name="course_para2">The conjugate system sees you utilize the same movement pattern over and over, but frequently varies how you train that pattern. So while you may know that the main lift in a given workout will be a squat, it could be a Front Squat, Zercher Squat, Back Squat, etc </string>
    <string name="course_para3">Gymnastics is a sport that includes exercises requiring balance, strength, flexibility, agility, coordination, and endurance. The movements involved in gymnastics contribute to the development of the arms, legs, shoulders, back, chest, and abdominal muscle groups. Alertness, precision, daring, self-confidence, and self-discipline are mental traits that can also be developed through gymnastics </string>
    <string name="course_para4">In a nutshell, BODYPUMP is a 30-, 45-, or 55-minute resistance workout that uses a barbell with very light weights and very high reps. … During the workout, you go through five or six specific exercises, in different combinations, and end up completing approximately 800 to 1000 reps in one 55-minute session </string>
    <string name="course_para5">Best for chest exercise: The push-up, Best exercise for glutes: The squat, Best exercise for abs: The bicycle manoeuvre,Best exercise for the back: Pull-up, Best exercise for hamstrings: Swiss ball hamstring curl,Best exercise for thighs: The lunge </string>
    <string name="course_para6">40-Minute Walking and Running Workout: The fastest pace in this workout is 5.8 miles per hour, and the running intervals never top two minutes. 60-Minute Workout Mixing Walking and Jogging: Perfect for when you\'re ready to push your endurance, this hour-long workout will burn close to 300 calorie </string>
    <string name="book_for_demo_title">Schedule a free demo</string>
    <string name="book_for_demo_para">Please fill out the following information and we\'ll be in touch with you shortly to schedule a free demo presentation.</string>
    <string name="resources_title">RESOURCES</string>
    <string name="resources_para">Building A Community of Fitness Athletic </string>
    <string name="resources_title1">Fitness One in Arkansas, USA</string>
    <string name="resources_title2">Ciudad Jardin Fitness24Seven Franchise in Colombia</string>
    <string name="resources_title3">Il Fiore Health Centers in the Netherlands</string>
    <string name="resources_post1">Posted by Sarath sathyan in General</string>
    <string name="resources_post2">Posted by Sarath sathyan in General</string>
    <string name="resources_post3">Posted by Sarath sathyan in General</string>
    <string name="resources_date1">12 APRIL</string>
    <string name="resources_date2">12 APRIL</string>
    <string name="resources_date3">12 APRIL</string>
    <string name="resources_para1">As the Chief Technology Officer of Arkansas’ Fitness One clubs, Jake Curreri understands better than anyone the dire need for technological advancement in the fitness industry. Read all about how Fitness One in the United States has embraced digitally transforming their clubs with Perfect Gym\'s platform</string>
    <string name="resources_para2">Entering the Colombian fitness market, Fitness 24 Seven gym set out to give their new members personalized and convenient experiences. Learn more about how they achieved it</string>
    <string name="resources_para3">Entering the Colombian fitness market, Fitness 24 Seven gym set out to give their new members personalized and convenient experiences. Learn more about how they achieved it</string>
    <string name="features_title">FEATURES</string>
    <string name="features_para">Building A Community of Fitness Athletic</string>
    <string name="features_title1">Easy registration of members</string>
    <string name="features_title2">Members Feedback</string>
    <string name="features_title3">Contact</string>
    <string name="features_title4">Brochure Facility</string>
    <string name="features_title5">Schedule for demo</string>
    <string name="features_title6">Easy customization</string>
    <string name="features_para1">Click here to reister for courses</string>
    <string name="features_para2">Feedback from members is important</string>
    <string name="features_para3">Our help team is ready to clear all your doubts</string>
    <string name="features_para4">Brochure wil contain the information about the team</string>
    <string name="features_para5">Schedule time for a demo of our website</string>
    <string name="features_para6">Accept special features and response from our customers</string>
    <string name="contact_main_title">CONTACT US</string>
    <string name="contact_main_para">Building A Community of Fitness Athletic</string>
    <string name="contact_title">Get In Touch</string>
    <string name="contact_para">A gym is a club, building, or large room, usually containing special equipment, where people go to do physical exercise and get fit.</string>
    <string name="contact_location">Near Christ College Bangalore, Karnataka</string>
    <string name="contact_email1">sarathsathyangeetha@gmail.com</string>
    <string name="contact_email2">Contact_us@yourdomein.com</string>
    <string name="contact_phone1">+91–8147907030</string>
    <string name="contact_phone2">+91–9539247954</string>
    <string name="contact_time1">Monday - friday: 11am to 8pm</string>
    <string name="contact_time2">Saturday - Sunday: 11am To 5pm</string>
    <string-array name="state_array">

        <item>Andaman &amp; Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra &amp; Nagar Haveli</item>
        <item>Daman &amp; Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>