<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.course"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="CLASSES "
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/about_fragment_title"
        android:textColor="#FA3D02"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes1" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title1"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:id="@+id/kettlebellClick"
                            android:tag="@string/course_title1"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title2"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"                            android:gravity="center_horizontal"
                            android:id="@+id/conjugateClick"
                            android:tag="@string/course_title2"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes3" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title3"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:id="@+id/gymnasticClick"
                            android:gravity="center_horizontal"
                            android:tag="@string/course_title3"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes4" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title4"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:id="@+id/bodyClick"
                            android:gravity="center_horizontal"
                            android:tag="@string/course_title4"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes5" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title5"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:id="@+id/strikingClick"
                            android:gravity="center_horizontal"
                            android:tag="@string/course_title5"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/classes6" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/course_title6"
                            android:textColor="@color/appColor"
                            android:gravity="center_horizontal"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:paddingBottom="5dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/click_for_more_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:id="@+id/cardioClick"
                            android:gravity="center_horizontal"
                            android:tag="@string/course_title6"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>